Use overflow-x: hidden; on the body as a fix for the issue of scrollbars appearing when the user list is slid off the page.

--- a/stylesheets/common.css
+++ b/stylesheets/common.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 body .light, .light, .light #Chat-Screen, .light #settingsScreen, .light #reconnectingScreen, .light #Message-Box, .light #serverListIcon {
   background-color: #fff;
   color: #212529
